# duck

./: .dockerignore  .gitattributes  .gitignore  .gitmodules  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Cargo.toml  Dockerfile  LICENSE  README.md  app.dev.dockerfile  build.rs  build.sh  deny.toml  docker-compose.yml  ducktor.dev.dockerfile  package-lock.json  ui.dev.dockerfile
.github/workflows/: ci.yaml  pull_request.yml  push_release.yml
config/: example.json  schema.json
config/v0.3/: schema.json
config/v0.4/: schema.json
schemas/: v0.10.json  v0.13.json  v0.14.json  v0.4.json  v0.5.json  v0.6.json  v0.7.json  v0.8.json  v0.9.0.json
server/duck/: Cargo.toml
server/duck/src/: commands.rs  config.rs  main.rs
server/duck/src/commands/: run.rs  start.rs
server/duck/src/test_data/: config.json
server/duck_server/: Cargo.toml
server/duck_server/src/: builds.rs  config.rs  engine.rs  lib.rs  providers.rs  state.rs  utils.rs  web.rs
server/duck_server/src/engine/: accumulator.rs  aggregator.rs  watcher.rs
server/duck_server/src/providers/: teamcity.rs
src/: api.rs  builds.rs  commands.rs  config.rs  engine.rs  filters.rs  lib.rs  logging.rs  main.rs  providers.rs  query.rs  utils.rs
src/api/: endpoints.rs  mod.rs  models.rs
src/collectors/: azure.rs  mod.rs  teamcity.rs
src/commands/: schema.rs  service.rs  start.rs  validate.rs
src/config/: expansions.rs  loader.rs  mod.rs  validation.rs
src/config/test_data/: config.json
src/config/validation/: azure.rs  hue.rs  mattermost.rs  slack.rs  teamcity.rs
src/engine/: accumulator.rs  aggregator.rs  collecting.rs  mod.rs  observing.rs  state.rs  watcher.rs
src/engine/state/: builds.rs  mod.rs  ui.rs  views.rs
src/observers/: hue.rs  mattermost.rs  mod.rs  slack.rs
src/providers/: collectors.rs  mod.rs  observers.rs
src/providers/collectors/: mod.rs
src/providers/collectors/appveyor/: client.rs  mod.rs  validation.rs
src/providers/collectors/appveyor/test_data/: builds.json
src/providers/collectors/azure/: client.rs  mod.rs  validation.rs
src/providers/collectors/azure/test_data/: builds.json
src/providers/collectors/debugger/: client.rs  mod.rs  validation.rs
src/providers/collectors/debugger/test_data/: builds.json
src/providers/collectors/duck/: client.rs  mod.rs  validation.rs
src/providers/collectors/duck/test_data/: builds.json  view.json
src/providers/collectors/github/: client.rs  mod.rs  validation.rs
src/providers/collectors/github/test_data/: builds.json
src/providers/collectors/jenkins/: mod.rs  validation.rs
src/providers/collectors/octopus/: client.rs  mod.rs  validation.rs
src/providers/collectors/teamcity/: client.rs  mod.rs  validation.rs
src/providers/observers/: mod.rs
src/providers/observers/hue/: client.rs  mod.rs  validation.rs
src/providers/observers/mattermost/: client.rs  mod.rs  validation.rs
src/providers/observers/slack/: client.rs  mod.rs  validation.rs
src/query/: lexer.rs  parser.rs
src/utils/: colors.rs  date.rs  http.rs  mod.rs  switch.rs  text.rs
ui/: package-lock.json  package.json
ui/public/: index.html
ui/src/: App.vue  main.js
ui/src/components/: Build.vue  Builds.vue
ui/src/styles/: custom.scss
web/: .env  .eslintrc.js  README.md  jest.config.js  output.js  package-lock.json  package.json  postcss.config.js  tailwind.config.js  wallaby.js
web/public/: index.html
web/src/: App.vue  Error.vue  main.js  store.js
web/src/assets/styles/: main.css
web/src/components/: Build.vue  BuildIcon.vue  BuildList.vue  Navigation.vue  ServerInfo.vue  Settings.vue  SkeletonBuild.vue  StatusIcon.vue  ViewList.vue
web/src/components/Menu/: Burger.vue  Sidebar.vue
web/src/css/: card.css
web/src/js/: config.js  store.js
web/src/styles/: custom.scss
web/tests/unit/: BuildIcon.spec.js  Error.spec.js  ServerInfo.spec.js  Settings.spec.js  StatusIcon.spec.js  ViewList.spec.js
