[package]
name = "duck"
version = "0.11.0"
authors = ["Patrik Svensson <patrik@patriksvensson.se>"]
edition = "2018"
license = "MIT OR Apache-2.0"

[features]
docker = []
embedded-web = []

[[bin]]
name = "duck"
path = "src/main.rs"

[dependencies]
actix-rt = "1"
async-std = { version = "1", features = ["attributes"] }
failure = "0.1.6"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
url = "2.1.0"
reqwest = { version = "0.9.22", default-features = false, features = [ "rustls-tls" ] }
waithandle = "0.3.0"
actix-web = "2"
actix-files = "0.2.1"
actix-cors = "0.2.0"
actix-web-static-files = "2.0.0"
structopt = "0.3.9"
log = "0.4"
env_logger = "0.7.1"
chrono = "0.4.10"
regex = "1.3.3"
schemars = "0.7.0-alpha-1"
derive_builder = "0.9.0"
base64 = "0.11.0"

[dev-dependencies]
test-case = "0.3.3"

[build-dependencies]
actix-web-static-files = "2.0.0"

[profile.release]
panic = 'abort'
lto = true
codegen-units = 1
incremental = false
opt-level = "z"