[package]
name = "duck"
version = "0.10.0"
authors = ["Patrik Svensson <patrik@patriksvensson.se>"]
edition = "2018"

[dependencies]
async-std = { version = "1", features = ["attributes"] }
env_logger = "0.7"
log = "0.4.8"
serde_json = "1.0"
structopt = "0.3.11"

duck_server = { path = "../duck_server" }

[dev-dependencies]
