[package]
name = "duck_server"
version = "0.10.0"
authors = ["Patrik Svensson <patrik@patriksvensson.se>"]
edition = "2018"

[dependencies]
actix-web = "2"
async-std = { version = "1", features = ["attributes"] }
failure = "0.1.6"
log = "0.4.8"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
waithandle = "0.1"
